Avoid CKEditor color from bleeding into fields

--- a/public/css/themes/components/_form.scss
+++ b/public/css/themes/components/_form.scss
@@ -51,6 +51,6 @@ $ipb-field--value--color: $ipb-color-grey-900 !default;
   color: $ipb-field--label--color;
 }
 
-.form_field_control {
+.form_field_control, .form_field_control .ipb-is-html-content {
   color: $ipb-field--value--color;
 }
